Badge spacing fix, use :user-invalid and 100dvh

--- a/src/Badge.css
+++ b/src/Badge.css
@@ -7,7 +7,7 @@ badge-i {
   font-weight: 500;
   display: inline-flex;
   line-height: 1;
-  padding: var(--spacing-xs) var(--spacing-m);
+  padding: var(--spacing-xs) var(--spacing-s);
   gap: var(--spacing-xs);
 
   &[type="danger"] {
