--- a/src/base.css
+++ b/src/base.css
@@ -6,7 +6,7 @@
     color: var(--color-fg-primary);
     font-family: var(--font-family-text);
     font-size: var(--font-size-m);
-    min-height: 100vh;
+    min-height: 100dvh;
   }
 
   /* todo headings? */
